# tiresias_aar_benchmark

./: .gitignore  README.md  pyproject.toml
configs/: acquisition.yaml  benchmark_grid.yaml  default.yaml
datasets/librispeech_dev_clean_200_seed_2026/: README.txt  manifest.csv  manifest.json
docs/: ARCHITECTURE.md  CODE_PROVENANCE.md  DATA_SCHEMA.md  EXPERIMENT_01_COMMANDS_PTBR.md  EXPERIMENT_01_IMPLEMENTATION_STATUS.md  EXPERIMENT_01_QUICK_CHECKLIST_PTBR.md  EXPERIMENT_02_QUICK_CHECKLIST_PTBR.md  EXPERIMENT_02_TROUBLESHOOTING_PTBR.md  EXPERIMENT_PROTOCOL.md  HOW_TO_RUN_EXPERIMENT_01_PTBR.md  HOW_TO_RUN_EXPERIMENT_02_PTBR.md  LIMITATIONS.md  MIGRATION_REPORT.md  MISSING_FIRMWARE_CAPABILITIES.md
experiments/exp01_orientation_characterization/: README.md  config.yaml
experiments/exp02_brir_measurement/: README.md  config.asio.yaml  config.yaml
experiments/exp03_sigma_sensitivity/: README.md  config.yaml
experiments/exp04_latency_sensitivity/: README.md  config.yaml
experiments/exp05_separator_requirements/: README.md  (+1 more)
scripts/: generate_all_figures.py  generate_sweep.py  process_brirs.py  record_multichannel_audio.py  record_telemetry.py  run_experiment.py
tests/: test_attention.py  test_calibration.py  test_delay.py  test_experiment_01_figures.py  test_experiment_01_protocol.py  test_experiment_02_audio_devices.py  test_experiment_02_figures.py  test_experiment_02_plan.py  test_experiment_03_sigma.py  test_experiment_04_latency.py  test_experiment_05_separator.py  test_leakage.py  test_metrics.py  test_orientation_circular.py  test_quaternion.py
(+738 files in other folders)
